corrected piechart on small screen

--- a/src/Admin/AdminLandingPage.module.css
+++ b/src/Admin/AdminLandingPage.module.css
@@ -9,8 +9,8 @@
 @media screen and (min-width:1024px){
  .ViewContainer{
     display: grid;
-    grid-template-columns: auto 30%;
-    grid-gap:10px
+    grid-template-columns:  auto 30%;
+    grid-gap:20px
  }  
 }
 
@@ -46,5 +46,8 @@
 @media (max-width: 768px)  {
    .card{
    margin-left: 100px;
+}
+.ChartandNotifications{
+  display: none;
 }
  }
